<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textColor="?attr/tool_main_text_color"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_week_sunday" />

        <TextView
            android:textColor="?attr/tool_main_text_color"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_week_monday" />

        <TextView
            android:textColor="?attr/tool_main_text_color"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_week_tuesday" />

        <TextView
            android:textColor="?attr/tool_main_text_color"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_week_wednesday" />

        <TextView
            android:textColor="?attr/tool_main_text_color"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_week_thursday" />

        <TextView
            android:textColor="?attr/tool_main_text_color"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_week_friday" />

        <TextView
            android:textColor="?attr/tool_main_text_color"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_week_saturday" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>