<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/wallpaper_translate_describe"
        android:textColor="?attr/tool_main_text_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/wallpaper_translate_describe_msg"
        android:textColor="?attr/tool_second_text_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:text="@string/wallpaper_translate_attention"
        android:textColor="?attr/tool_second_text_color" />

    <Button
        android:id="@+id/btn_enable"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_btn"
        android:text="@string/wallpaper_translate_button_enable"
        android:textColor="?attr/tool_main_text_color" />

    <Button
        android:id="@+id/btn_disable"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_btn"
        android:text="@string/wallpaper_translate_button_close"
        android:textColor="?attr/tool_main_text_color" />

</LinearLayout>