<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout_qrcode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:textColor="?attr/tool_main_text_color"
        android:id="@+id/et_qr"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_bg"
        android:gravity="center"
        android:hint="@string/qrcode_input_text_hint"
        android:textColorHint="?attr/tool_second_text_color"
        android:textSize="12dp" />

    <TextView
        android:textColor="?attr/tool_second_text_color"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/qrcode_show_bitmap" />

    <ImageView
        android:id="@+id/img_result"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_bg"
        android:padding="3dp" />

    <Button
        android:textColor="?attr/tool_main_text_color"
        android:id="@+id/btn_create"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_btn"
        android:text="@string/qrcode_create_bitmap" />

    <Button
        android:textColor="?attr/tool_main_text_color"
        android:id="@+id/btn_scane"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_btn"
        android:text="@string/qrcode_scan_bitmap" />

</LinearLayout>
